--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-eslint": "^4.1.8",
     "babel-loader": "^5.4.0",
     "babel-plugin-dev-expression": "^0.1.0",
+    "bootstrap": "^3.3.6",
     "bundle-loader": "^0.5.4",
     "codecov.io": "^0.1.6",
     "coveralls": "^2.11.9",
